[gd_scene load_steps=3 format=2]

[ext_resource path="res://Entities/Bullets/BulletA.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[node name="BulletA" type="RigidBody2D"]
collision_layer = 16
collision_mask = 0
gravity_scale = 0.0
contacts_reported = 5
contact_monitor = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="placeholder" type="Polygon2D" parent="."]
position = Vector2( 3.57628e-007, -3.57628e-007 )
scale = Vector2( 1.5, 1.5 )
polygon = PoolVector2Array( 0, -4, -3, -3, -4, 0, -3, 3, 0, 4, 3, 3, 4, 0, 3, -3 )

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
